fix packaged Java runtime options